Add user/{username}:GET Change unmatched handler
